--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,17 +10,17 @@
         android:layout_width="match_parent">
 
         <include
-            android:id="@+id/home_toolbar"
+            android:id="@+id/toolbar"
             layout="@layout/include_toolbar"/>
         <include
-            android:layout_below="@id/home_toolbar"
+            android:layout_below="@id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="8dp"
             layout="@layout/include_toolbar_shadow"/>
 
         <FrameLayout
             android:id="@+id/container"
-            android:layout_below="@id/home_toolbar"
+            android:layout_below="@id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </RelativeLayout>
