--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,6 +28,15 @@
     <color name="navdrawer_icon_tint">#888</color>
     <color name="navdrawer_icon_tint_selected">@color/theme_primary</color>
 
+    <!-- 87% von #000000 -> DE -->
+    <color name="drawer_primary_text">#DE000000</color>
+    <!-- 54% von #000000 -> 8A -->
+    <color name="drawer_secondary_text">#8A000000</color>
+    <!-- 26% von #000000 -> 42 -->
+    <color name="drawer_hint_text">#42000000</color>
+    <!-- 12% von #000000 -> 1F -->
+    <color name="drawer_divider">#1F000000</color>
+
     <color name="session_photo_scrim">#6000</color>
 
     <color name="tab_selected_text">#FFFFFF</color>
