--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,9 +3,16 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <dimen name="nav_drawer_status_bar_offset">0dp</dimen>
+    <!--<dimen name="nav_drawer_status_bar_offset">0dp</dimen>-->
 
     <dimen name="navigation_drawer_width">304dp</dimen>
+
+    <dimen name="navigation_drawer_margin">0dp</dimen>
+    <!-- General padding value -->
+    <dimen name="navigation_drawer_padding">8dp</dimen>
+    <!-- General vertical padding values -->
+    <dimen name="navigation_drawer_vertical_padding">16dp</dimen>
+
     <dimen name="navdrawer_account_height">140dp</dimen>
     <dimen name="keyline_1">16dp</dimen>
 
