--- a/app/src/main/res/layout/item_navigation_drawer.xml
+++ b/app/src/main/res/layout/item_navigation_drawer.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="48dp"
+    android:gravity="center"
     android:layout_marginTop="16dp"
     android:layout_marginBottom="16dp">
 
@@ -10,6 +11,7 @@
         android:id="@+id/item_nav"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:text="2222"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
