--- a/app/src/main/res/layout/fragment_inquiry_container.xml
+++ b/app/src/main/res/layout/fragment_inquiry_container.xml
@@ -1,9 +1,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.mredrock.cyxbs.presenter.fragment.InquiryContainerFragment">
 
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textColor="@color/body_text_1"
         android:text="inquuiry...." />
 
 </FrameLayout>
