--- a/app/src/main/res/layout/item_navigation_drawer.xml
+++ b/app/src/main/res/layout/item_navigation_drawer.xml
@@ -11,7 +11,7 @@
         android:id="@+id/item_nav"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="2222"
+        android:textColor="@color/body_text_1"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
